--- a/.gitignore
+++ b/.gitignore
@@ -554,3 +554,4 @@ FodyWeavers.xsd
 # End of https://www.toptal.com/developers/gitignore/api/c,c++,visualstudiocode,visualstudio,macos,windows,linux
 
 bin/._*
+.vscode
